finally figured out the bug that was off centering in mobile

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -15,20 +15,21 @@ a:hover {
 
 .header {
     background-color: rgb(137, 137, 250);
-    padding: 20px;
     width: 100%;
-
 }
 
-.header ul {
+.header nav {
     background-color: rgb(137, 137, 250);
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    justify-content: space-around;
 }
 
-.header ul li {
+.header nav li {
     background-color: rgb(137, 137, 250);
-    display: inline;
-    margin: 75px;
+    list-style: none;
+    margin: 35px;
     font-size: 25px;
 }
 
@@ -64,7 +65,7 @@ a:hover {
     text-align: center;
     font-size: 25px;
     background-color: lightcoral;
-    width: 35%;
+    width: 45%;
     height: 100px;
     padding: 30px;
     border: 3px solid black;
@@ -78,7 +79,7 @@ a:hover {
     text-align: center;
     font-size: 25px;
     background-color: lightblue;
-    width: 35%;
+    width: 45%;
     height: 100px;
     padding: 30px;
     border: 3px solid black;
@@ -138,10 +139,9 @@ a:hover {
 
     .header {
         padding: 0px;
-        
     }
 
-    .header ul li {
+    .header nav {
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
@@ -150,9 +150,14 @@ a:hover {
         margin: 0px;
     }
 
+    .header nav li {
+        margin: 10px;
+    }
+
     .footer {
         position: unset;
         display: flex;
         justify-content: center;
     }
+
 }
